<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_server_group_title"
        android:key="pref_key_server_settings">
        <EditTextPreference
            android:key="@string/pref_key_server"
            android:summary="@string/pref_summary_server_name"
            android:title="@string/pref_title_server_name"
            android:defaultValue="" />
        <Preference
            android:title="@string/pref_title_test_server"
            android:key="@string/pref_key_button_test_server"
            android:summary="@string/pref_summary_test_server"
            android:dependency="@string/pref_key_server"/>
        <EditTextPreference
            android:key="@string/pref_key_port"
            android:summary="@string/pref_summary_server_port"
            android:title="@string/pref_title_server_port"
            android:defaultValue="3000"
            android:inputType="numberDecimal" />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/settings_user_group_title"
            android:key="pref_key_user_settings">
        <EditTextPreference
                android:key="@string/pref_key_user_name"
                android:summary="@string/pref_summary_user_name"
                android:title="@string/pref_title_user_name"
                android:defaultValue=""
                android:inputType="text"/>
        <EditTextPreference
                android:key="@string/pref_key_password"
                android:dependency="@string/pref_key_user_name"
                android:summary="@string/pref_summary_password"
                android:title="@string/pref_title_password"
                android:inputType = "textPassword"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/settings_advanced_group_title"
            android:key="pref_key_advanced_settings">
        <CheckBoxPreference
                android:key="@string/pref_key_enable_root"
                android:title="@string/pref_title_enable_root"
                android:summary="@string/pref_summary_enable_root" />
        <EditTextPreference
                android:key="@string/pref_key_retries"
                android:title="@string/pref_title_retries"
                android:summary="@string/pref_summary_retries"
                android:inputType="numberDecimal"
                android:defaultValue="0"/>
        <EditTextPreference
                android:key="@string/pref_key_timeout"
                android:title="@string/pref_title_timeout"
                android:summary="@string/pref_summary_timeout"
                android:inputType="numberDecimal"
                android:defaultValue="300"/>
        <EditTextPreference
                android:key="@string/pref_key_max_connection"
                android:title="@string/pref_title_max_connections"
                android:summary="@string/pref_summary_max_connections"
                android:inputType="numberDecimal"
                android:defaultValue="1" />
    </PreferenceCategory>
</PreferenceScreen>