<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/text_test_name" android:layout_gravity="center_horizontal"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/session_name"
            android:id="@+id/edit_text_session_name" android:layout_gravity="center_horizontal"/>
    <EditText
            android:layout_width="match_parent"
            android:hint="@string/session_description"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_session_description" android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start_session_text"
            android:id="@+id/button_start_session" android:layout_gravity="center_horizontal"/>
</LinearLayout>